[package]
name = "FT_TP110"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tapo = { path = "/home/fran6t/TP-LINK/tapoclone/tapo" }  #pour debug
tapo = "0.7"
tokio = { version = "1.4", features = ["full"] }
chrono = { version = "0.4.25", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.11" # Pour gerer les paraletre deuis un fichier de config
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }

[[bin]]
name = "ft_tp110"
path = "src/main.rs"
